--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -6,21 +6,34 @@
     justify-content: space-between;
     align-items: center;
 
+    svg{
+        color:orange;
+    }
+
     .contact{
+        display:flex;
         color:white;
+        width:70%;
         opacity: 0.7;
         margin-left:10%;
+        
+        
+
+        .contact_items{
+            width:30%;
+
+        }
+      
 
 
         a{
-            margin-right:50px;
+            margin-right:5px;
             font-size: 15px;
             
         }
 
 
     }
-
 
     .button{
         margin-right:10%;
