--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,26 @@
           align-items: center;
 }
 
+.header svg {
+  color: orange;
+}
+
 .header .contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   color: white;
+  width: 70%;
   opacity: 0.7;
   margin-left: 10%;
 }
 
+.header .contact .contact_items {
+  width: 30%;
+}
+
 .header .contact a {
-  margin-right: 50px;
+  margin-right: 5px;
   font-size: 15px;
 }
 
@@ -90,16 +102,24 @@
   color: white;
 }
 
+.navbar-brand:hover {
+  color: white;
+}
+
 .navbar-nav li a {
   color: rgba(255, 255, 255, 0.555);
   text-decoration: none;
+}
+
+.navbar-nav li a:hover {
+  color: white;
 }
 
 .navbar-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 40%;
+  margin-left: 50%;
 }
 
 .teaser_intro {
