--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -11,27 +11,17 @@
     }
 
     .contact{
-        display:flex;
+       
+        width:100%;
+        height: 50px;
         color:white;
-        width:70%;
-        opacity: 0.7;
+        opacity: 0.8;
         margin-left:10%;
-        
-        
-
-        .contact_items{
-            width:30%;
-
-        }
-      
-
+        display:Flex;
 
         a{
-            margin-right:5px;
-            font-size: 15px;
-            
-        }
-
+            margin-left:2%;
+        }    
 
     }
 
