--- a/src/style.css
+++ b/src/style.css
@@ -18,22 +18,16 @@
 }
 
 .header .contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  width: 100%;
+  height: 50px;
   color: white;
-  width: 70%;
-  opacity: 0.7;
+  opacity: 0.8;
   margin-left: 10%;
-}
-
-.header .contact .contact_items {
-  width: 30%;
+  display: Flex;
 }
 
 .header .contact a {
-  margin-right: 5px;
-  font-size: 15px;
+  margin-left: 2%;
 }
 
 .header .button {
@@ -54,15 +48,6 @@
 }
 
 .navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding-left: 10%;
   padding-right: 10%;
 }
