--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -18,7 +18,6 @@
         opacity: 0.8;
         margin-left:10%;
         display:Flex;
-
         a{
             margin-left:2%;
         }    
@@ -34,4 +33,12 @@
             height:38px;
         }
     }
+}
+
+.dropdown{
+.btn-dropdown{
+    margin-top:1px;
+    color:white;
+    opacity:0.6;
+}
 }
