--- a/src/style.css
+++ b/src/style.css
@@ -1,53 +1,7 @@
-.header {
-  height: 70px;
-  width: 100%;
-  background-color: #0D6CB9;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.header svg {
-  color: orange;
-}
-
-.header .contact {
-  width: 100%;
-  height: 50px;
-  color: white;
-  opacity: 0.8;
-  margin-left: 10%;
-  display: Flex;
-}
-
-.header .contact a {
-  margin-left: 2%;
-}
-
-.header .button {
-  margin-right: 10%;
-}
-
-.header .button button {
-  color: white;
-  border-radius: 20px;
-  width: 140px;
-  height: 38px;
-}
-
 .navigation {
   height: 100px;
   width: auto;
   background-color: rgba(0, 0, 0, 0.11);
-}
-
-.navigation {
   padding-left: 10%;
   padding-right: 10%;
 }
@@ -83,28 +37,22 @@
   background-color: rgba(0, 0, 0, 0.11);
 }
 
-.navbar-brand {
-  color: white;
-}
-
-.navbar-brand:hover {
-  color: white;
-}
-
-.navbar-nav li a {
-  color: rgba(255, 255, 255, 0.555);
-  text-decoration: none;
-}
-
-.navbar-nav li a:hover {
-  color: white;
-}
-
 .navbar-nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-left: 50%;
+}
+
+.navbar-brand-color {
+  color: white;
+  text-decoration: none;
+  font-size: 40px;
+  font-weight: 200;
+}
+
+.nav-link {
+  color: white;
 }
 
 .teaser_intro {
@@ -193,5 +141,54 @@
   height: 1100px;
   width: 100%;
   background-color: #0D6CB9;
+}
+
+.header {
+  height: 70px;
+  width: 100%;
+  background-color: #0D6CB9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header svg {
+  color: orange;
+}
+
+.header .contact {
+  width: 100%;
+  height: 50px;
+  color: white;
+  opacity: 0.8;
+  margin-left: 10%;
+  display: Flex;
+}
+
+.header .contact a {
+  margin-left: 2%;
+}
+
+.header .button {
+  margin-right: 10%;
+}
+
+.header .button button {
+  color: white;
+  border-radius: 20px;
+  width: 140px;
+  height: 38px;
+}
+
+.dropdown .btn-dropdown {
+  margin-top: 1px;
+  color: white;
+  opacity: 0.6;
 }
 /*# sourceMappingURL=style.css.map */
